--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,7 @@
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
+    <TextView android:text="Hello sdsfsdfsdf!" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 
