--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
-TTT
+
+
+    sdfsdsfsdjflsj
 
 
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
