--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,8 @@
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
 
-    sdfsdsfsdjflsj
+    sfsdfe
+    ssdg
 
 
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
